2010-08-04  Dirk Eddelbuettel  <edd@debian.org>

	* Upgraded to Armadillo 0.9.60 "Killer Bush Turkey" with changes:
	  - More flexible reshape(), allowing significantly different
	    matrix sizes
	  - Added matrix initialisation via the << operator
	  - Fixes for compilation issues under Mac OS X with GCC 4.2/4.0
	    hybrid

2010-08-03   Romain Francois <romain@r-enthusiasts.com>

	* Upgraded to Armadillo 0.9.58 beta for testing purposes

        * inst/include/armadillo: Reworked so that armadillo_bits/
	  directory can be included as is without minor tweaks to
	  armadillo_bits/config.hpp

2010-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.4

	* inst/include/armadillo_bits: Added small patch to not use asinh,
	acosh and atanh on win32 as the (older) MinGW compiler cannot cope.
	This problem will go away once R 2.12 is released as it requires
	gcc / g++ 4.5.

2010-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/* : upgrade to armadillo 0.9.52 "Monkey Wrench"

	* src/fastLm.cpp: Switch from inv() (which now throws a warning on
	(near) singular matrices and returns an empty matrix) to the
	Moore-Penrose pseudo-inverse pinv() which allows us to continue
	the example from the manual page. Of course, for standard use inv() is
	doing the right thing by issueing the warning.

2010-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.3

2010-06-14   Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadilloConfig.h: Addition cconfig helping suncc

2010-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.2

2010-06-02   Romain Francois <romain@r-enthusiasts.com>

	* inst/include/* : upgrade to armadillo 0.9.10

	* inst/include/* : support for new mtOp and mtGlue, introduced in
	armadillo 0.9.10

2010-05-27   Romain Francois <romain@r-enthusiasts.com>

	* R/flags.R: added RcppArmadillo:::CxxFlags()

2010-05-19   Romain Francois <romain@r-enthusiasts.com>
